--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,8 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-   
+    
+    <div style="background-color:#00caff61" id="root"></div>
+    
   </body>
 </html>
